--- a/vue-frontend/package.json
+++ b/vue-frontend/package.json
@@ -15,6 +15,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.4.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3",
     "vite": "^5.4.8"
   }
